--- a/main.ipynb
+++ b/main.ipynb
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "# -----------------------------\n",
-    "image_path = \"one.png\"\n",
+    "image_path = \"input_sample.png\"\n",
     "output_folder = \"characters\"\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "resize_dim = (img_width, img_height)\n",
